@@ -88,13 +88,13 @@ check_dir depends on
 
 =item * Getopt::Long
 
-=item * Nagios::Plugin
+=item * Monitoring::Plugin
 
-=item * Nagios::Plugin::Getopt
+=item * Monitoring::Plugin::Getopt
 
-=item * Nagios::Plugin::Range
+=item * Monitoring::Plugin::Range
 
-=item * Nagios::Plugin::Threshold
+=item * Monitoring::Plugin::Threshold
 
 =item * version
 
